# voxkeep

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
docs/plans/: 2026-02-15-asr-local-injector-design.md  2026-02-15-asr-local-injector.md  2026-02-16-asr-local-injector-design.md  2026-02-16-asr-local-injector-implementation.md  2026-02-16-mvp-acceptance.md  2026-02-18-uv-structure-refactor-design.md  2026-02-18-uv-structure-refactor.md  2026-02-20-project-onboarding-map.md  2026-03-29-modular-monolith-refactor-design.md  2026-03-29-modular-monolith-refactor.md  2026-03-30-modular-monolith-final-shape-design.md  2026-03-30-modular-monolith-final-shape.md  2026-03-30-project-hardening-design.md  2026-03-30-project-hardening.md  2026-04-01-runtime-boundary-cleanup-design.md  2026-04-01-runtime-boundary-cleanup.md  2026-04-01-voxkeep-rename.md  2026-04-19-audio-engine-rename-design.md  2026-04-19-concurrency-maintenance-design.md  2026-04-19-config-decomposition-design.md  2026-04-19-refactor-config-and-rename-module.md
scripts/: check_env.sh  check_runtime_ai.py  run_local.sh  setup_openwakeword_models.py  start_qwen_vllm.sh  stop_qwen_vllm.sh
src/asr_ol/: __main__.py
src/voxkeep/: __main__.py
tests/: conftest.py
tests/architecture/: test_final_shape.py  test_module_dependencies.py  test_module_layout.py  test_test_layout.py
tests/e2e/: test_cli_help.py  test_pipeline_tts_audio.py
(+191 files in other folders)
