[project]
name = "asr-ol"
version = "0.1.0"
description = "Local always-on ASR with wake capture and text injection"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "PyYAML>=6.0.1",
  "numpy>=1.26.4",
  "websockets>=12.0",
  "sounddevice>=0.4.6",
]

[project.scripts]
asr-ol = "asr_ol.cli.main:main"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pyright>=1.1.389",
  "ruff>=0.9.0",
  "pre-commit>=4.0.1",
]
runtime-ai = [
  "openwakeword>=0.6.0",
  "silero-vad>=6.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "D"]
ignore = ["E501", "D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"src/asr_ol/__init__.py" = ["D"]
"src/asr_ol/__main__.py" = ["D"]
"src/asr_ol/agents/**" = ["D"]
"src/asr_ol/infra/audio/**" = ["D"]
"src/asr_ol/infra/vad/**" = ["D"]
"src/asr_ol/infra/wake/**" = ["D"]
"src/asr_ol/tools/**" = ["D"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["src/asr_ol"]
reportMissingTypeStubs = false

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
